# CG_TermProject

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CG_TermProject.sln  CG_TermProject.vcxproj  CG_TermProject.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  fragment.glsl  imgui.ini  vcpkg.json  vertex.glsl
Assets/Audio/: TitleSceneMusic.mp3.asd
Assets/Map/: level0.json  level1.json  level2.json  level5.json  level6.json  level7.json
Assets/Score/: Scores.json
Assets/Shaders/: GameObject.frag  GameObject.vert  Standard.frag  Standard.vert  Text.frag  Text.vert  UIObject.frag  UIObject.vert
Editor/: Editor.vcxproj  Main.cpp
Engine/: CG_TermProject.vcxproj  CG_TermProject.vcxproj.filters
Engine/Core/: Application.cpp  Application.h  Input.h  Time.cpp  Time.h
Engine/Level/: Scene.h
Engine/Rendering/: Shader.cpp  Shader.h
Notes/: 2025_11_1_개발일지_#1.txt
Sources/: EditScene.cpp  EditScene.h  Entity.h  GameScene.cpp  GameScene.h  Main.cpp  Math.h  PCH.h  TitleScene.cpp  TitleScene.h  Transform.h  World.cpp  World.h
Sources/Core/: Application.cpp  Application.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Time.cpp  Window.cpp  Window.h
Sources/Editor/: CameraController.h  EditScene.cpp  EditScene.h  Editor.cpp  Editor.h  Editor.vcxproj  Editor.vcxproj.filters  Main.cpp  Program.cpp  imgui.ini  level1.txt  level3.json  level4.json  level6.json  level7.json
Sources/Framework/: Application.cpp  Application.h  Audio.cpp  Audio.h  Common.cpp  Common.h  Debug.cpp  Debug.h  Directory.hpp  Editor.cpp  Editor.h  File.hpp  FileSystem.h  Framework.vcxproj  Framework.vcxproj.filters  IO.cpp  IO.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Math.h  Objects.cpp  Objects.h  PCH.h  Rendering.cpp  Rendering.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  SceneManagement.h  Scenes.cpp  Scenes.h  Time.cpp  Time.h  UI.cpp  UI.h
Sources/Game/: CreditsScene.cpp  CreditsScene.h  Game.vcxproj  (+16 more)
(+78 files in other folders)
